Fix Resources path diagnostics test to not fail for read-only files.

This removes the system level precondition and will now only run the
test if the file is actually meant to be read-only.

BUG=843211

Change-Id: I55abddd4f250732f815875dd626a80bda999f205
Reviewed-on: https://chromium-review.googlesource.com/1060172
Commit-Queue: Will Harris <wfh@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560843}
Former-commit-id: 08e3c1f692d31ef03367a930c66fe0b7e5381f1b